GearsetPOC/force-app/main/default/objects/Conversion__c/Conversion__c.object-meta.xml
<CustomObject>
    <label>Conversion</label>
    <nameField>
        <displayFormat>{YYYY}{MM}{DD}-{0}</displayFormat>
        <label>Conversion Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Conversions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>