GearsetPOC/force-app/main/default/objects/Conversion__c/fields/Adult__c.field-meta.xml
<CustomField>
    <fullName>Adult__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Adult</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>