GearsetPOC/force-app/main/default/objects/Conversion__c/fields/Child__c.field-meta.xml
<CustomField>
    <fullName>Child__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Child</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>