GearsetPOC/force-app/main/default/objects/Conversion__c/fields/Class_In__c.field-meta.xml
<CustomField>
    <fullName>Class_In__c</fullName>
    <label>Class In</label>
    <length>125</length>
    <type>Text</type>
</CustomField>