GearsetPOC/force-app/main/default/objects/Conversion__c/fields/Class_Out__c.field-meta.xml
<CustomField>
    <fullName>Class_Out__c</fullName>
    <label>Class Out</label>
    <length>125</length>
    <type>Text</type>
</CustomField>