GearsetPOC/force-app/main/default/objects/Conversion__c/fields/Origin_Currency__c.field-meta.xml
<CustomField>
    <fullName>Origin_Currency__c</fullName>
    <label>Origin Currency</label>
    <length>3</length>
    <required>true</required>
    <type>Text</type>
</CustomField>