GearsetPOC/force-app/main/default/objects/Conversion__c/fields/Page_Path__c.field-meta.xml
<CustomField>
    <fullName>Page_Path__c</fullName>
    <label>Page Path</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>