GearsetPOC/force-app/main/default/objects/Conversion__c/fields/Travel_Preferences__c.field-meta.xml
<CustomField>
    <fullName>Travel_Preferences__c</fullName>
    <label>Travel Preferences</label>
    <length>100</length>
    <type>Text</type>
</CustomField>